--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "A simple and fast 2D engine based on PIXI",
   "main": "js/main.js",
-  "dependencies": {},
+  "dependencies": {
+    "howler": "^2.0.5",
+    "pixi.js": "4.5.6",
+    "pixijs-charm": "^0.1.4",
+    "requirejs": "^2.3.5"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
